Fixed missing border and adjusted padding for the inline code in Live Preview #184

--- a/src/scss/Editor/editorStyling.scss
+++ b/src/scss/Editor/editorStyling.scss
@@ -53,6 +53,9 @@ hr {
 	font-family: var(--font-text);
 	font-size: var(--font-text-size);
 }
+.cm-s-obsidian .cm-inline-code:not(.cm-formatting) {
+	padding: 0 var(--size-4-1);
+}
 
 .cm-s-obsidian span.cm-formatting-highlight.cm-inline-code,
 .cm-s-obsidian span.cm-highlight.cm-inline-code {
