--- a/src/scss/Variables/coreVariables.scss
+++ b/src/scss/Variables/coreVariables.scss
@@ -122,6 +122,7 @@ body {
 	--embed-padding: unset;
 
 	--code-comment: var(--color-grey-text);
+	--code-border-width: 1px;
 
 	--graph-controls-width: 150px;
 
